--- a/css/common.css
+++ b/css/common.css
@@ -40,9 +40,9 @@ i {
 .get-btn {
   padding: 0.4vw 0;
   border-radius: 0.3vw;
-  /*background: rgba(145,181,77,1);*/
-  background: #07c;
-  box-shadow: 1px 1px 1px #07c;
+  background: rgba(33,163,213,1);
+  /*background: #07c;*/
+  box-shadow: 1px 1px 1px rgba(33,163,213,.6);
   text-align: center;
   color: #fff;
 }
