--- a/css/common.css
+++ b/css/common.css
@@ -1,13 +1,13 @@
-@font-face {
-  src: url(../font/SourceHanSerifCN-ExtraLight.otf);
-  font-family: "goo-ado";
-}
+/*@font-face {*/
+  /*src: url(../font/SourceHanSerifCN-ExtraLight.otf);*/
+  /*font-family: "goo-ado";*/
+/*}*/
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   /*background: #eee;*/
-  font-family: "goo-ado";
+  /*font-family: "goo-ado";*/
   font-size: 1vw;
   color: #444;
 }
@@ -15,7 +15,8 @@ html,
 body {
   width: 100vw;
   height: 100vh;
-  /*background: #eee;*/
+  background: linear-gradient(rgba(200,200,200,.4) 5%, rgba(200,200,200,.2) 5%);
+  background-size: 20px 20px;
 }
 li {
   list-style: none;
@@ -70,24 +71,58 @@ header #logo {
 header #logo:hover {
   color: #f00;
 }
+/*header b.cart {*/
+  /*transform: translateY(3px);*/
+  /*font-size: 12px;*/
+  /*line-height: 16px;*/
+  /*text-align: center;*/
+/*}*/
 header b.cart {
-  transform: translateY(3px);
-  font-size: 12px;
-  line-height: 16px;
-  text-align: center;
+  position: relative;
+  width: 16px;
+  height: 16px;
+  border: 1px solid #999;
+  border-radius: 2px;
+}
+header b.cart:before {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  display: block;
+  content: '';
+  width: 6px;
+  height: 6px;
+  border: 1px solid #999;
+  border-bottom-color: transparent;
+  border-radius: 50%;
 }
 header b.cart:hover {
-  border-color: #07c;
+  border-color: rgba(33,163,213,.6);
+}
+header b.cart i {
+  /*z-index: 0;*/
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  display: block;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+}
+header b.cart i.active {
+  background: rgba(33,163,213,.6);
 }
 header ul {
   display: none;
   position: absolute;
-  top: 42px;
+  top: 40px;
   right: -70px;
   padding: 10px 20px 0 20px;
   width: 140px;
   border: 1px solid #ccc;
   box-shadow: 1px 1px 1px #ccc;
+  background: rgba(230,230,230,1);
 }
 header ul li {
   padding: 6px 0;
@@ -97,13 +132,14 @@ header ul li:first-of-type {
   border: 0;
 }
 header ul li a {
-  color: #07c;
+  color: rgba(33,163,213,.6);
 }
 header ul li a:hover {
   text-decoration: underline;
 }
 header ul li a i {
   font-style: normal;
+  color: inherit;
 }
 
 #footer-wrap {
@@ -122,24 +158,4 @@ footer {
 footer p {
   font-size: 12px;
   color: #aaa;
-}
-
-.cart {
-  position: relative;
-  width: 16px;
-  height: 16px;
-  border: 1px solid #999;
-  border-radius: 2px;
-}
-.cart:before {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%) translateY(-50%);
-  display: block;
-  content: '';
-  width: 6px;
-  height: 6px;
-  border: 1px solid #999;
-  border-bottom-color: transparent;
-  border-radius: 50%;
 }
